# hyperi-pylib

./: .ci-development  .env.backup  .env.sample  .gitattributes  .gitignore  .gitleaks.toml  .gitmodules  .hyperi-ci.yaml  .hypersec-ci.yaml  .mcp.json  .pip-audit-ignore  .pre-commit-config.yaml  .releaserc.json  .releaserc.yaml  AI-TRAINING-POLICY.md  BOOTSTRAP-TEST-SUMMARY.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile.jinja  HS-LIB-CI.md  LICENSE  Makefile  Makefile.jinja  README.md  STATE.md  TDD-KAFKA-WBS.md  TODO.md  VERSION  bootstrap-test-results.md  ci.yaml  docker-compose.kafka.yml  docker-compose.openbao.yml  docker-compose.postgres.yml  docker-compose.yml.jinja  dprint.json  env.example.jinja  install.sh  migrate_env.py  (+5 more)
.claude/: settings.json  settings.local.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci-publish.yml  ci.yml  jfrog-publish.yml  nuitka-release.yml  publish.yml  release.yml  semantic-release.yml  test-container-hooks.yml
.github/workflows-disabled/: local-ci.yml
.pip/: pip.conf
backup/: README.md  ci-local-pyproject.toml.backup  commit-msg.backup  gitignore.backup  pre-commit.backup
backup/claude/: settings.local.json
backup/pip.backup/: pip.conf
ci/: CI-REFACTORING-SUMMARY.md  LICENSE  SUBPROCESS-USAGE.md  bootstrap  bootstrap.py  ci.yaml  ci_lib.py  pyproject.toml  run  run-tests
ci-local/: .env.sample  .gitignore  .test-20251017-121712  .test-20251017-121752  .test-20251017-121848  .test-20251017-122104  .test-20251017-124536  .test-20251017-124613  .test-20251017-124644  .test-20251017-124723  .test-20251017-124759  .test-20251017-124841  .test-20251017-133530  .test-20251017-134121  .test-20251017-134900  CI-LOCAL.md  CODE-ASSISTANT-STARTUP.md  CODE-ASSISTANT.md  QUICKSTART.md  README.md  ci.yaml  coverage.md  pyproject.toml  write-version.py
ci-local/code-assistant/: DEREK-PREFERENCES.md  README.md
ci-local/common/: ci_local_lib.py
ci-local/common/bootstrap.d/: 95-ai-settings.py  95-ai-settings.py.backup  95-claude-settings.py
ci-local/common/ci.d/: 89-version-pre-sync.py
ci-local/python/ci.d/: 89-python-version-sync.py  99-fix-version.py
ci-local/tests/: test_ci.py
ci/bootstrap.d/: 00-check-git.py  00-check-git.sh  10-check-python.py  11-check-uv.py  11-check-uv.sh  15-jfrog-pip-config.py
ci/ci.d/: 15-clean-commit-message.py  20-python-test.py  80-build.py  90-semantic-release.py
ci/common/bootstrap.d/: 00-check-git.py  00-python-ci.py  05-project-structure.py
ci/common/ci.d/: 10-branch-name.py  15-clean-commit-message.py  90-semantic-release.py
ci/docs/: NUITKA.md  README.md  SUBTREE-USAGE.md
ci/python/: bootstrap.py  ci_lib.py
ci/python/bootstrap.d/: 00-python-project.py  05-python-structure.py  10-check-python.py  11-check-uv.py  12-jfrog.py  15-jfrog-pip-config.py  20-python-tools.py  25-nuitka.py
ci/python/ci.d/: 20-python-test.py  21-python-dependency-update.py  80-build.py  85-build-nuitka.py  90-semantic-release.py  95-python-version-sync.py
common/ci.d/: 11-chars-policy.py
docs/: ANONYMIZER.md  APP-API.md  APP-CLI.md  APP-DAEMON.md  APP-MCP.md  APP-ONESHOT.md  ARCHITECTURE.md  ARTIFACTORY.md  AUTO-WIRING.md  BOOTSTRAP-ANALYSIS.md  CHARS-POLICY.md  CLI-MIGRATION-ANALYSIS.md  CLI-STANDARDS.md  CLICKHOUSE_PYTHON_BINDINGS.md  CONFIG.md  CONTAINER_DEPLOYMENT.md  EXTRAS-FLAGS.md  INTEGRATION.md  KAFKA.md  KUBERNETES.md  LOGGING.md  METRICS.md  PKI.md  POST-GA-DEFERRED.md  POSTGRESQL-CONFIG.md  PROFILES.md  PROMETHEUS-METRICS.md  README.md  RUNTIME-ARCHITECTURE.md  SECRETS.md  SERVICE-ACCESS.md  TEMPLATE-CHANGES.md  TESTING.md  code-review-findings.md
docs/ai/: CODEX.md
docs/api/: CACHE.md  CLI.md  CONCURRENCY.md  DATABASE.md  DIRECTORY-CONFIG.md  EXPRESSION.md  HARNESS.md  HTTP-CLIENT.md  LICENSE.md  RESILIENCE.md  SCALING.md  SECRETS.md  VERSION-CHECK.md
docs/bugs/: BUGS-CI.md  CI-MIGRATION-PLAN.md
docs/core-pillars/: CONFIG.md  HEALTH.md  LOGGING.md  METRICS.md  SHUTDOWN.md
docs/deployment/: ARTEFACTS.md  CONTRACT.md  IDENTITY.md  KEDA.md  NATIVE-DEPS.md  TEST-SUPPORT.md
docs/runtime/: RUNTIME-CONTEXT.md  SERVICE-RUNTIME.md
docs/standards/: CHARS-POLICY.md  CLAUDE-CODE.md  CODE-ASSISTANT.md  CODE-HEADER.md  GIT-WORKFLOW.md  PYTHON-CODING.md  PYTHON-CONFIG.md  python-coding-standards.md
docs/transport/: KAFKA.md
examples/: README.md
examples/api-container/: Dockerfile  README.md  docker-compose.yml  prometheus.yml  requirements.txt
examples/basic-logging/: README.md  main.py  pyproject.toml
examples/basic-logging/tests/: __init__.py  test_main.py
examples/config-cascade/: .env.example  README.md  main.py  pyproject.toml  settings.dev.yaml  settings.yaml
examples/config-cascade/tests/: __init__.py  test_main.py
examples/daemon-container/: Dockerfile  README.md  docker-compose.yml  prometheus.yml  requirements.txt
examples/fastapi-metrics/: README.md  main.py  pyproject.toml
examples/fastapi-metrics/tests/: __init__.py  test_main.py
examples/kafka-producer-consumer/: README.md  consumer.py  docker-compose.yml  producer.py  pyproject.toml
examples/kafka-producer-consumer/tests/: __init__.py  test_main.py
examples/postgres-cache/: README.md  docker-compose.yml  main.py  pyproject.toml
examples/postgres-cache/tests/: __init__.py  test_main.py
k8s/: configmap.yaml.jinja  deployment.yaml.jinja  service.yaml.jinja
python/ci.d/: 21-python-dependency-update.py
scripts/: CI-PYTHON.md  bootstrap.py  ci  ci-actions-python.yaml  ci-actions.yaml  ci_lib.py  docker-build.sh.jinja  setup-scaffold.sh
scripts/bootstrap.d/: 10-check-python.sh  15-jfrog-pip-config.py  20-python-dev-tools.py  20-python-tools.py
scripts/ci.d/: 10-branch-name.py  11-chars-policy.py  11-chars-policy.yaml  20-python-render-and-test.py  20-python-test.py  80-build.py  (+4 more)
tests/: .env.integration.example  README.md  conftest.py  test_application.py  test_application_e2e.py  test_bootstrap.py  test_deploy_e2e.py  test_e2e.py.jinja  test_import.py
tools/: vendor_patterns.sh
(+612 files in other folders)
