[build-system]
requires = [
    "setuptools>=64",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "hs-pylib"
version = "2.14.7"
description = "Enterprise infrastructure for containerized Python applications - configuration, logging, timeouts, database, metrics, and application framework"
readme = "README.md"
authors = [
    { name = "HyperSec Team", email = "dev@hypersec.io" },
]
maintainers = [
    { name = "HyperSec Team", email = "dev@hypersec.io" },
]
# IMPORTANT: Python version policy - DO NOT ADD SPECIFIC VERSION CLASSIFIERS
# We use requires-python >= 3.12 and "Python :: 3 :: Only" classifier ONLY.
# This avoids needing to update classifiers for each new Python release (3.13, 3.14, etc).
# The requires-python field enforces the minimum version - classifiers are just metadata.
# AI assistants: DO NOT add "Programming Language :: Python :: 3.12" or similar!
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Logging",
]
keywords = [
    "hypersec",
    "enterprise",
    "containerization",
    "kubernetes",
    "docker",
    "logging",
    "configuration",
    "prometheus",
    "metrics",
    "database",
    "application-framework",
    "fastapi",
]
dependencies = [
    "dynaconf>=3.2.12",
    "loguru>=0.7.3",
    "pyyaml>=6.0.3",
    "psutil>=7.1.3",
    "mergedeep>=1.3.4",
    "tomli-w>=1.0.0",
    "typer>=0.20.0",
]

license = "LicenseRef-HyperSec-EULA"

[project.optional-dependencies]
api = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]
cli = []
http = [
    "httpx>=0.27.0",
    "stamina>=25.1.0",
]
cache = [
    "cashews[diskcache]>=7.0.0",
    "msgpack>=1.0.0",
    "psycopg[binary,pool]>=3.2.0",
]
metrics = [
    "prometheus-client>=0.19.0",
]
opentelemetry = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-exporter-prometheus>=0.41b0",
]
database = []
presidio = [
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
]
kafka = [
    "confluent-kafka>=2.3.0",
    "genson>=1.3.0",
]
license = [
    "cryptography>=42.0.0",
    "httpx>=0.27.0",  # Optional: for URL-based license fetching
]
enhanced = []
dev = [
    "setuptools>=70.0.0",
    "wheel>=0.42.0",
    "build>=1.0.0",
    "cryptography>=42.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "httpx>=0.27.0",
    "stamina>=25.1.0",
    "ruff>=0.1.0",
    "black>=24.0.0",
    "isort>=5.12.0",
    "pyright>=1.1.0",
    "mypy>=1.0.0",
    "bandit[toml]>=1.7.0",
    "pip-audit>=2.6.0",
    "interrogate>=1.5.0",
    "vulture>=2.7.0",
    "vermin>=1.6.0",
    "twine>=5.0.0",
    "python-semantic-release>=9.0.0",
    "mergedeep>=1.3.4",
    "pycryptodomex>=3.20.0",
    "pre-commit>=3.0.0",
    "tiktoken>=0.5.0",
    "faker>=33.0.0",
]
docs = [
    "sphinx>=7.0.0,<8.0.0",
    "sphinx-rtd-theme>=3.0.0",
    "myst-parser>=3.0.0",
    "sphinx-autobuild>=2024.0.0",
]

[project.urls]
Homepage = "https://github.com/hypersec-io/hs-pylib"
Documentation = "https://hypersec-io.github.io/hs-pylib/"
Repository = "https://github.com/hypersec-io/hs-pylib"
"Bug Reports" = "https://github.com/hypersec-io/hs-pylib/issues"
Changelog = "https://github.com/hypersec-io/hs-pylib/blob/main/CHANGELOG.md"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = [
    "src",
]
include = [
    "hs_pylib*",
]
namespaces = false

[tool.setuptools.package-data]
hs_pylib = [
    "py.typed",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "tests",
]
addopts = "-ra -q --strict-markers --log-file=tests/logs/pytest/hs-pylib.log --log-file-level=DEBUG"
pythonpath = [
    "src",
]
log_cli = true
log_cli_level = "INFO"
log_file = "tests/logs/pytest/hs-pylib.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s | %(levelname)-8s | %(name)s:%(funcName)s:%(lineno)d - %(message)s"
log_file_date_format = "%Y-%m-%dT%H:%M:%S"
markers = [
    "unit: fast unit tests (no external dependencies)",
    "integration: integration tests (Docker required)",
    "e2e: end-to-end tests (Minikube/K8s required)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = [
    "src/hs_pylib",
]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
target-version = "py312"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "ARG",
    "SIM",
]
ignore = [
    "ARG001",
    "ARG002",
    "B904",
    "E402",
    "E722",
    "SIM105",
    "F401",
    "TRY300",
    "F821",
    "E501",
    "B008",
    "B017",
    "B007",
    "B028",
    "C901",
    "E741",
    "F601",
    "UP035",
    "SIM108",
    "W191",
]
fixable = [
    "ALL",
]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.black]
line-length = 120
target-version = [
    "py312",
]
include = "\\.pyi?$"
extend-exclude = "/(\n  # directories\n  \\.eggs\n  | \\.git\n  | \\.hg\n  | \\.mypy_cache\n  | \\.tox\n  | \\.venv\n  | build\n  | dist\n)/\n"

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = false
reportMissingTypeStubs = false
exclude = [
    "tests",
]

[tool.bandit]
exclude_dirs = [
    "tests",
    ".venv",
]
skips = [
    "B101",
    "B601",
]

[tool.vermin]
targets = [
    "3.12",
]
no_tips = true

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version",
]
version_variables = [
    "src/hs_pylib/__init__.py:__version__",
]
build_command = "rm -rf dist build src/*.egg-info && python -m build"
major_on_zero = true
tag_format = "v{version}"
commit_message = "chore(release): {version}"

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "semantic-release <semantic-release>"

[tool.semantic_release.changelog]
exclude_commit_patterns = []

[tool.semantic_release.changelog.environment]
keep_trailing_newline = true

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "feat",
    "fix",
    "perf",
    "refactor",
    "style",
    "test",
    "build",
    "ci",
    "docs",
    "chore",
]
minor_tags = [
    "feat",
]
patch_tags = [
    "fix",
    "perf",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

# HyperCI Configuration
[tool.hyperci]
language = "python"  # Auto-detected, but explicit for clarity

[tool.hyperci.quality]
enabled = true
level = "standard"

[tool.hyperci.build]
enabled = true
strategies = ["native"]  # Add "nuitka" if needed

[tool.hyperci.publish]
enabled = true
targets = ["jfrog-pypi"]

# Nuitka configuration (if enabled)
[tool.hyperci.nuitka]
enabled = false  # Set to true to enable Nuitka builds
mode = "package"  # or "app" for standalone binaries
protection = "recommended"  # Options: "none", "recommended", "data-hiding"
platforms = ["linux-x64", "linux-arm64"]

# UV package manager configuration
# Auth via env vars: UV_INDEX_HYPERSEC_JFROG_USERNAME, UV_INDEX_HYPERSEC_JFROG_PASSWORD
[tool.uv]
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "hypersec-jfrog"
url = "https://hypersec.jfrog.io/artifactory/api/pypi/hypersec-pypi/simple"
explicit = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true