[build-system]
requires = [
    "setuptools>=64",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "hyperi-pylib"
version = "2.25.0-dev.4"
description = "Enterprise infrastructure for containerized Python applications - configuration, logging, timeouts, database, metrics, and application framework"
readme = "README.md"
authors = [
    { name = "HyperI Team", email = "dev@hyperi.io" },
]
maintainers = [
    { name = "HyperI Team", email = "dev@hyperi.io" },
]
# IMPORTANT: Python version policy - DO NOT ADD SPECIFIC VERSION CLASSIFIERS
# We use requires-python >= 3.12 and "Python :: 3 :: Only" classifier ONLY.
# This avoids needing to update classifiers for each new Python release (3.13, 3.14, etc).
# The requires-python field enforces the minimum version - classifiers are just metadata.
# AI assistants: DO NOT add "Programming Language :: Python :: 3.12" or similar!
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Logging",
]
keywords = [
    "hypersec",
    "enterprise",
    "containerization",
    "kubernetes",
    "docker",
    "logging",
    "configuration",
    "prometheus",
    "metrics",
    "database",
    "application-framework",
    "fastapi",
]
dependencies = [
    "dynaconf>=3.2.13",
    "loguru>=0.7.3",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.3",
    "mergedeep>=1.3.4",
    "tomli-w>=1.0.0",
    "typer>=0.20.0",
    "dulwich>=0.22.0",
]

license = "LicenseRef-FSL-1.1-ALv2"

[project.optional-dependencies]
cli = []
http = [
    "httpx>=0.27.0",
    "stamina>=25.1.0",
]
cache = [
    "cashews>=7.0.0",
    "msgpack>=1.0.0",
    "psycopg[binary,pool]>=3.2.0",
]
metrics = [
    "prometheus-client>=0.19.0",
    "psutil>=7.1.0",
]
opentelemetry = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-exporter-prometheus>=0.41b0",
]
expression = [
    "common-expression-language>=0.5.6",
]
database = []
kafka = [
    "confluent-kafka>=2.3.0",
    "genson>=1.3.0",
]
presidio = [
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
]
secrets-vault = []
secrets-aws = [
    "boto3>=1.35.0",
    "aiobotocore>=2.15.0",
]
secrets-gcp = [
    "google-cloud-secret-manager>=2.26.0",
]
secrets-azure = [
    "azure-keyvault-secrets>=4.9.0",
    "azure-identity>=1.25.1",
]
secrets = [
    "boto3>=1.35.0",
    "aiobotocore>=2.15.0",
    "google-cloud-secret-manager>=2.26.0",
    "azure-keyvault-secrets>=4.9.0",
    "azure-identity>=1.25.1",
]
license = [
    "cryptography>=46.0.5",
    "httpx>=0.27.0",  # Optional: for URL-based license fetching
]
version-check = []
enhanced = []
dev = [
    "setuptools>=70.0.0",
    "wheel>=0.42.0",
    "build>=1.0.0",
    "cryptography>=46.0.5",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "httpx>=0.27.0",
    "stamina>=25.1.0",
    "boto3>=1.35.0",
    "aiobotocore>=2.15.0",
    "ruff>=0.1.0",
    "black>=26.3.1",
    "isort>=5.12.0",
    "ty>=0.0.21",
    "mypy>=1.0.0",
    "bandit[toml]>=1.7.0",
    "pip-audit>=2.6.0",
    "vulture>=2.7.0",
    "vermin>=1.6.0",
    "twine>=5.0.0",
    "python-semantic-release>=9.0.0",
    "mergedeep>=1.3.4",
    "pycryptodomex>=3.20.0",
    "pre-commit>=3.0.0",
    "tiktoken>=0.5.0",
    "faker>=33.0.0",
]
docs = [
    "sphinx>=8.0.0,<10",
    "sphinx-rtd-theme>=3.0.0",
    "myst-parser>=5.0.0",
    "sphinx-autobuild>=2024.0.0",
]

[project.urls]
Homepage = "https://github.com/hyperi-io/hyperi-pylib"
Documentation = "https://hyperi-io.github.io/hyperi-pylib/"
Repository = "https://github.com/hyperi-io/hyperi-pylib"
"Bug Reports" = "https://github.com/hyperi-io/hyperi-pylib/issues"
Changelog = "https://github.com/hyperi-io/hyperi-pylib/blob/main/CHANGELOG.md"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = [
    "src",
]
include = [
    "hyperi_pylib*",
]
namespaces = false

[tool.setuptools.package-data]
hyperi_pylib = [
    "py.typed",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "tests",
]
addopts = "-ra -q --strict-markers --log-file=tests/logs/pytest/hyperi-pylib.log --log-file-level=DEBUG"
pythonpath = [
    "src",
]
log_cli = true
log_cli_level = "INFO"
log_file = "tests/logs/pytest/hyperi-pylib.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s | %(levelname)-8s | %(name)s:%(funcName)s:%(lineno)d - %(message)s"
log_file_date_format = "%Y-%m-%dT%H:%M:%S"
markers = [
    "unit: fast unit tests (no external dependencies)",
    "integration: integration tests (Docker required)",
    "e2e: end-to-end tests (Minikube/K8s required)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = [
    "src/hyperi_pylib",
]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
target-version = "py312"
line-length = 120
indent-width = 4
src = ["src"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "ARG",
    "SIM",
    "S",
    "N",
    "PT",
    "RUF",
    "PIE",
    "T20",
]
ignore = [
    "ARG001",
    "ARG002",
    "B904",
    "E402",
    "E722",
    "SIM105",
    "F401",
    "TRY300",
    "F821",
    "E501",
    "B008",
    "B017",
    "B007",
    "B028",
    "C901",
    "E741",
    "F601",
    "UP035",
    "SIM108",
    "W191",
    # Security rule relaxations (library code)
    "S101",   # assert (used in tests — standard pytest pattern)
    "S110",   # try-except-pass (intentional in error handling)
    "S311",   # suspicious-non-cryptographic-random (used for jitter, not crypto)
    "S603",   # subprocess-without-shell-equals-true (CI scripts)
    "S607",   # start-process-with-partial-path (CI scripts)
    "S105",   # hardcoded-password-string (test fixtures)
    "S104",   # hardcoded-bind-all-interfaces (0.0.0.0 is intentional for containers)
    "S108",   # hardcoded-temp-file (intentional /tmp use in runtime detection)
    "S112",   # try-except-continue (intentional skip patterns)
    "S608",   # hardcoded-sql-expression (cache module SQL, not user input)
    # Print statements — library uses print for CLI output, not logging
    "T201",
    # Ruff-specific relaxations
    "RUF012", # mutable-class-default (Pydantic/dataclass patterns)
    "RUF013", # implicit-optional (TEMP: needs unsafe-fixes)
    "RUF022", # unsorted-dunder-all (TEMP: needs unsafe-fixes)
    "RUF059", # unused-unpacked-variable
    "RUF001", # ambiguous-unicode-character-string
    "RUF002", # ambiguous-unicode-character-docstring
    "RUF003", # ambiguous-unicode-character-comment
    "RUF006", # asyncio-dangling-task (intentional fire-and-forget)
    # Naming relaxations
    "N806",   # non-lowercase-variable-in-function
    "N818",   # error-suffix-on-exception-name (existing exception names)
    # Misc
    "PIE810", # multiple-starts-ends-with (stylistic)
    "SIM102", # collapsible-if (readability preference)
    "RUF005", # collection-literal-concatenation (readability preference)
    # Pytest style (relaxed — conventions vary)
    "PT001",  # pytest-fixture-incorrect-parentheses-style
    "PT003",  # pytest-extraneous-scope-function
    "PT021",  # pytest-fixture-finalizer-callback
    # Docstring style rules — keep D1xx (missing docstrings), relax formatting
    "D100",   # Missing module docstring (too noisy for __init__.py etc)
    "D104",   # Missing docstring in public package
    "D105",   # Missing docstring in magic method
    "D107",   # Missing docstring in __init__
    "D200",   # One-line docstring should fit on one line
    "D203",   # 1 blank line before class docstring (conflicts with D211)
    "D205",   # 1 blank line between summary and description
    "D212",   # Multi-line docstring summary on first line (conflicts with D213)
    "D400",   # First line should end with a period
    "D401",   # First line should be in imperative mood
    "D415",   # First line should end with period/question/exclamation
]
fixable = [
    "ALL",
]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "PT011", "PT006", "PT017", "PT012", "PT018", "PT003", "PT022", "N803", "RUF003", "RUF015", "RUF043"]
"tests/*.py" = ["S", "PT011", "PT006", "PT017", "PT012", "PT018", "PT003", "PT022", "N803", "RUF003", "RUF015", "RUF043"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.black]
line-length = 120
target-version = [
    "py312",
]
include = "\\.pyi?$"
extend-exclude = "/(\n  # directories\n  \\.eggs\n  | \\.git\n  | \\.hg\n  | \\.mypy_cache\n  | \\.tox\n  | \\.venv\n  | build\n  | dist\n)/\n"

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.ty.environment]
python-version = "3.12"

[tool.bandit]
exclude_dirs = [
    "tests",
    ".venv",
]
skips = [
    "B101",
    "B601",
]

[tool.vermin]
targets = [
    "3.12",
]
no_tips = true

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version",
]
version_variables = [
    "src/hyperi_pylib/__init__.py:__version__",
]
build_command = "rm -rf dist build src/*.egg-info && python -m build"
major_on_zero = true
tag_format = "v{version}"
commit_message = "chore(release): {version}"

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "semantic-release <semantic-release>"

[tool.semantic_release.changelog]
exclude_commit_patterns = []

[tool.semantic_release.changelog.environment]
keep_trailing_newline = true

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "feat",
    "fix",
    "perf",
    "refactor",
    "style",
    "test",
    "build",
    "ci",
    "docs",
    "chore",
]
minor_tags = [
    "feat",
]
patch_tags = [
    "fix",
    "perf",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

# HyperCI Configuration
[tool.hyperci]
language = "python"  # Auto-detected, but explicit for clarity

[tool.hyperci.quality]
enabled = true
level = "standard"

[tool.hyperci.build]
enabled = true
strategies = ["native"]  # Add "nuitka" if needed

[tool.hyperci.publish]
enabled = true
targets = ["jfrog-pypi"]

# Nuitka configuration (if enabled)
[tool.hyperci.nuitka]
enabled = false  # Set to true to enable Nuitka builds
mode = "package"  # or "app" for standalone binaries
protection = "recommended"  # Options: "none", "recommended", "data-hiding"
platforms = ["linux-x64", "linux-arm64"]

# UV package manager configuration
# Auth via env vars: UV_INDEX_HYPERSEC_JFROG_USERNAME, UV_INDEX_HYPERSEC_JFROG_PASSWORD
[tool.uv]
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "hypersec-jfrog"
url = "https://hypersec.jfrog.io/artifactory/api/pypi/hyperi-pypi/simple"
explicit = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[dependency-groups]
dev = [
    "azure-identity>=1.25.1",
    "azure-keyvault-secrets>=4.9.0",
    "fastapi>=0.115.0",
    "google-cloud-secret-manager>=2.26.0",
]
