[build-system]
requires = ["uv_build>=0.8.0,<1"]
build-backend = "uv_build"

[project]
name = "hyperi-pylib"
version = "2.27.2"
description = "Opinionated, drop-in Python toolkit for production services at scale. The patterns from blog posts as actual code: 8-layer config cascade, structured logging with PII masking, Prometheus + OpenTelemetry, multi-backend secrets (Vault/AWS/GCP/Azure), Kafka helpers, CEL expression engine, FastAPI-friendly."
readme = "README.md"
authors = [
    { name = "HyperI Team", email = "dev@hyperi.io" },
]
maintainers = [
    { name = "HyperI Team", email = "dev@hyperi.io" },
]
# IMPORTANT: Python version policy - DO NOT ADD SPECIFIC VERSION CLASSIFIERS
# We use requires-python >= 3.12 and "Python :: 3 :: Only" classifier ONLY.
# This avoids needing to update classifiers for each new Python release (3.13, 3.14, etc).
# The requires-python field enforces the minimum version - classifiers are just metadata.
# AI assistants: DO NOT add "Programming Language :: Python :: 3.12" or similar!
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Logging",
]
keywords = [
    "observability",
    "structured-logging",
    "configuration",
    "dynaconf",
    "prometheus",
    "opentelemetry",
    "metrics",
    "tracing",
    "secrets-management",
    "vault",
    "kafka",
    "cel",
    "asyncio",
    "httpx",
    "fastapi",
    "kubernetes",
    "docker",
    "containerization",
    "application-framework",
]
dependencies = [
    "dynaconf>=3.2.13",
    "loguru>=0.7.3",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.3",
    "mergedeep>=1.3.4",
    "tomli-w>=1.0.0",
    "typer>=0.25.0",
    "dulwich>=1.2.0",
    "anyio>=4.13.0",
    "asyncer>=0.0.17",
    "detect-secrets>=1.5.0",
]

license = "LicenseRef-FSL-1.1-ALv2"

[project.optional-dependencies]
cli = []
# Resilience composition (with_resilience) — retry + circuit breaker.
# Pulled in automatically by [http], [cache], [secrets-*]; install
# directly with `pip install hyperi-pylib[resilience]` for standalone use.
resilience = [
    "stamina>=26.1.0",
    "purgatory>=3.0.1",
]
http = [
    "httpx>=0.28.0",
    "stamina>=26.1.0",
    "purgatory>=3.0.1",
]
cache = [
    "cashews>=7.5.0",
    "msgpack>=1.1.0",
    "psycopg[binary,pool]>=3.3.0",
]
metrics = [
    "prometheus-client>=0.25.0",
    "psutil>=7.2.0",
]
opentelemetry = [
    "opentelemetry-api>=1.41.0",
    "opentelemetry-sdk>=1.41.0",
    "opentelemetry-exporter-otlp>=1.41.0",
    "opentelemetry-exporter-prometheus>=0.62b0",
]
expression = [
    "common-expression-language>=0.5.6",
]
deployment = [
    "pydantic>=2.13.0",
]
database = []
kafka = [
    "confluent-kafka>=2.14.0",
    "genson>=1.3.0",
]
# PII detection — regex-only (no spaCy, no Explosion AI cluster).
# Covers EMAIL, PHONE, SSN, CREDIT_CARD, IP_ADDRESS, DATE, ZIP_CODE
# at <1ms/call. Safe for hot-path log masking.
pii = [
    "datafog>=4.4.0",
]
# PII detection — with NLP (spaCy NER) for unstructured entities like
# names and locations. 5-200ms/call depending on model — DO NOT use
# in hot-path log masking. For batch / compliance / audit only.
pii-ner = [
    "datafog[nlp]>=4.4.0",
]
# DEPRECATED: use [pii] or [pii-ner] instead. Pulls in spaCy + thinc
# cluster which currently blocks ecosystem updates (see TODO.md).
# Will be removed in a future release.
presidio = [
    "presidio-analyzer>=2.2.362",
    "presidio-anonymizer>=2.2.362",
]
secrets-ansible-vault = [
    "ansible-vault>=4.0.0",
]
secrets-vault = []
secrets-aws = [
    "boto3>=1.43.0",
    "aiobotocore>=3.6.0",
]
secrets-gcp = [
    "google-cloud-secret-manager>=2.28.0",
]
secrets-azure = [
    "azure-keyvault-secrets>=4.11.0",
    "azure-identity>=1.25.1",
]
secrets = [
    "ansible-vault>=4.0.0",
    "boto3>=1.43.0",
    "aiobotocore>=3.6.0",
    "google-cloud-secret-manager>=2.28.0",
    "azure-keyvault-secrets>=4.11.0",
    "azure-identity>=1.25.1",
]
license = [
    "cryptography>=48.0.0",
    "httpx>=0.28.0",  # Optional: for URL-based license fetching
]
version-check = []
enhanced = []
dev = [
    "ansible-vault>=4.0.0",
    "cryptography>=48.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.36.0",
    "httpx>=0.28.0",
    "stamina>=26.1.0",
    "boto3>=1.43.0",
    "aiobotocore>=3.6.0",
    "moto[secretsmanager]>=5.2.0",
    "pydantic>=2.13.0",
    "ruff>=0.15.0",
    "ty>=0.0.34",
    "mypy>=1.0.0",
    "bandit[toml]>=1.7.0",
    "pip-audit>=2.6.0",
    "vulture>=2.16",
    "mergedeep>=1.3.4",
    "pycryptodomex>=3.20.0",
    "pre-commit>=4.6.0",
    "tiktoken>=0.5.0",
    "faker>=40.0.0",
]
docs = [
    "sphinx>=8.0.0,<10",
    "sphinx-rtd-theme>=3.0.0",
    "myst-parser>=5.0.0",
    "sphinx-autobuild>=2024.0.0",
]

[project.urls]
Homepage = "https://github.com/hyperi-io/hyperi-pylib"
Documentation = "https://hyperi-io.github.io/hyperi-pylib/"
Repository = "https://github.com/hyperi-io/hyperi-pylib"
"Bug Reports" = "https://github.com/hyperi-io/hyperi-pylib/issues"
Changelog = "https://github.com/hyperi-io/hyperi-pylib/blob/main/CHANGELOG.md"

[tool.uv.build-backend]
module-name = "hyperi_pylib"
module-root = "src"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "tests",
]
addopts = "-ra -q --strict-markers --log-file=tests/logs/pytest/hyperi-pylib.log --log-file-level=DEBUG"
pythonpath = [
    "src",
]
log_cli = true
log_cli_level = "INFO"
log_file = "tests/logs/pytest/hyperi-pylib.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s | %(levelname)-8s | %(name)s:%(funcName)s:%(lineno)d - %(message)s"
log_file_date_format = "%Y-%m-%dT%H:%M:%S"
asyncio_mode = "auto"
markers = [
    "unit: fast unit tests (no external dependencies)",
    "integration: integration tests (Docker required)",
    "e2e: end-to-end tests (Minikube/K8s required)",
    "smoke: startup smoke tests (mandatory, every push)",
    "slow: tests exceeding 30 seconds",
]
filterwarnings = []

[tool.coverage.run]
source = [
    "src/hyperi_pylib",
]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
fail_under = 80

[tool.ruff]
target-version = "py312"
line-length = 120
indent-width = 4
src = ["src"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "ARG",
    "SIM",
    "S",
    "N",
    "PT",
    "RUF",
    "PIE",
    "T20",
]
ignore = [
    "ARG001",
    "ARG002",
    "B904",
    "E402",
    "E722",
    "SIM105",
    "F401",
    "TRY300",
    "F821",
    "E501",
    "B008",
    "B017",
    "B007",
    "B028",
    "C901",
    "E741",
    "F601",
    "UP035",
    "SIM108",
    "W191",
    # Production-specific security relaxations
    "S104",   # hardcoded-bind-all-interfaces (0.0.0.0 is intentional for containers)
    "S110",   # try-except-pass (intentional in error handling)
    "S112",   # try-except-continue (intentional skip patterns)
    "S311",   # suspicious-non-cryptographic-random (used for jitter, not crypto)
    "S603",   # subprocess-without-shell-equals-true (CI scripts)
    "S607",   # start-process-with-partial-path (CI scripts)
    "S608",   # hardcoded-sql-expression (cache module SQL, not user input)
    # Print statements — library uses print for CLI output, not logging
    "T201",
    # Ruff-specific relaxations
    "RUF012", # mutable-class-default (Pydantic/dataclass patterns)
    "RUF059", # unused-unpacked-variable
    "RUF001", # ambiguous-unicode-character-string
    "RUF002", # ambiguous-unicode-character-docstring
    "RUF006", # asyncio-dangling-task (intentional fire-and-forget)
    # Naming relaxations
    "N806",   # non-lowercase-variable-in-function
    "N818",   # error-suffix-on-exception-name (existing exception names)
    # Misc
    "PIE810", # multiple-starts-ends-with (stylistic)
    "SIM102", # collapsible-if (readability preference)
    "RUF005", # collection-literal-concatenation (readability preference)
    # Docstring style rules — keep D1xx (missing docstrings), relax formatting
    "D100",   # Missing module docstring (too noisy for __init__.py etc)
    "D104",   # Missing docstring in public package
    "D105",   # Missing docstring in magic method
    "D107",   # Missing docstring in __init__
    "D200",   # One-line docstring should fit on one line
    "D203",   # 1 blank line before class docstring (conflicts with D211)
    "D205",   # 1 blank line between summary and description
    "D212",   # Multi-line docstring summary on first line (conflicts with D213)
    "D400",   # First line should end with a period
    "D401",   # First line should be in imperative mood
    "D415",   # First line should end with period/question/exclamation
]
fixable = [
    "ALL",
]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"


[tool.ruff.lint.per-file-ignores]
# Tests use `assert` (pytest convention), hardcoded test passwords, and /tmp paths.
# These are fine in test code — bandit-style hardening doesn't apply.
"tests/**" = [
    "S101", # use of assert
    "S105", # hardcoded password string (test fixtures)
    "S106", # hardcoded password in function arg (test fixtures)
    "S108", # probable insecure /tmp usage (tests use tempfile fixtures)
    "F541", # f-string without placeholders (sometimes intentional in test data)
    "RUF013", # implicit Optional — legacy test files; fix incrementally
    "PT017", # assertion-on-exception (legacy try/except pattern in test_secrets_exceptions.py)
    "PT011", # broad pytest.raises(ValueError) — legacy tests; tighten incrementally
    "PT012", # too-complex pytest.raises body — legacy
    "RUF043", # match=str without raw string — legacy
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ty.src]
exclude = ["examples/", "docs/"]

[tool.ty.environment]
python-version = "3.12"

[tool.bandit]
exclude_dirs = [
    "tests",
    ".venv",
]
skips = [
    "B101",
    "B601",
]

[tool.vermin]
targets = [
    "3.12",
]
no_tips = true

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

# UV package manager configuration
[tool.uv]
index-strategy = "unsafe-best-match"
# Bleeding-edge policy: force latest majors even when transitive deps
# specify older lower bounds. Re-evaluate at each /deps pass; remove
# overrides once the entire transitive tree has caught up.
override-dependencies = [
    "protobuf>=7.34.0",
    "rich>=15.0.0",
    "importlib_metadata>=9.0.0",
    "boto3>=1.43.6",
    "botocore>=1.43.6",
    # thinc>=9 forces the entire Explosion/spaCy ecosystem to regress
    # (blis, confection, weasel all major-downgrade). Leave thinc on 8.x
    # until spaCy ships compatible companions. Revisit each /deps pass.
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[dependency-groups]
dev = [
    "azure-identity>=1.25.1",
    "azure-keyvault-secrets>=4.9.0",
    "fastapi>=0.115.0",
    "google-cloud-secret-manager>=2.26.0",
]
