# Project:   hyperi-pylib
# File:      examples/basic-logging/pyproject.toml
# Purpose:   Example project demonstrating hyperi-pylib logging
# Language:  Python
#
# License:   BUSL-1.1
# Copyright: (c) 2026 HYPERI PTY LIMITED

[project]
name = "basic-logging-example"
version = "0.1.0"
description = "Example demonstrating hyperi-pylib structured logging"
requires-python = ">=3.12"
dependencies = [
    "hyperi-pylib>=2.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
