# Project:   hs-pylib
# File:      examples/config-cascade/pyproject.toml
# Purpose:   Example project demonstrating hs-pylib configuration cascade
# Language:  Python
#
# License:   LicenseRef-HyperSec-EULA
# Copyright: (c) 2026 HyperSec

[project]
name = "config-cascade-example"
version = "0.1.0"
description = "Example demonstrating hs-pylib 7-layer configuration cascade"
requires-python = ">=3.12"
dependencies = [
    "hs-pylib>=2.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
