# Project:   hyperi-pylib
# File:      examples/config-cascade/pyproject.toml
# Purpose:   Example project demonstrating hyperi-pylib configuration cascade
# Language:  Python
#
# License:   FSL-1.1-ALv2
# Copyright: (c) 2026 HYPERI PTY LIMITED

[project]
name = "config-cascade-example"
version = "0.1.0"
description = "Example demonstrating hyperi-pylib 7-layer configuration cascade"
requires-python = ">=3.12"
dependencies = [
    "hyperi-pylib>=2.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
