# Project:   hyperi-pylib
# File:      examples/fastapi-metrics/pyproject.toml
# Purpose:   Example project demonstrating hyperi-pylib metrics with FastAPI
# Language:  Python
#
# License:   FSL-1.1-ALv2
# Copyright: (c) 2026 HYPERI PTY LIMITED

[project]
name = "fastapi-metrics-example"
version = "0.1.0"
description = "Example demonstrating hyperi-pylib Prometheus metrics with FastAPI"
requires-python = ">=3.12"
dependencies = [
    "hyperi-pylib>=2.14.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "httpx>=0.28.0",  # For testing
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
